# GlideWars

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  GAMEPLAY_GUIDE.md  PERSISTENCE.md  README.md  TESTING.md  docker-compose.yml  index.html  nginx.conf
.claude/: settings.local.json
.github/workflows/: deploy.yml  release.yml  test.yml
benches/: README.md
src/: air_particles.rs  boss.rs  camera_system.rs  checkpoint.rs  clouds.rs  drone_companion.rs  enemy.rs  game_state.rs  input_manager.rs  level.rs  main.rs  player.rs  powerup.rs  rings.rs  save_system.rs  scene_manager.rs  terrain.rs
src/assets/: loader.rs  mod.rs  theme.rs
src/ui/: level_select.rs  main_menu.rs  mod.rs  options.rs  splash.rs  tutorial_instructions.rs
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: asset_validation.rs  game_state_transitions.rs  level_progression.rs  property_tests.rs
