[package]
name = "glidewars"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
